--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+status = { path = "../status", version = "0.1.0" }
+account = { path = "../account", version = "0.1.0" }
+organization = { path = "../organization", version = "0.1.0" }
+repository = { path = "../repository", version = "0.1.0" }
+uuid = { version = "0.7", features = ["serde", "v4"] }
+chrono = "0.4"
+env_logger = "0.5.11"
+log = "0.4.3"
+serde = "1.0.103"
+serde_json = "1.0.44"
+serde_derive = "1.0.103"
+actix-web = "2.0.0"
+actix-rt = "1.0.0"
+juniper = { version = "0.14.2", features = ["uuid"] }
