[Version: 0.1] Pre-release development - updated docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "3.8"
 services:
+  stoodly:
+    build: .
+    ports:
+      - "8080:8080"
+      - "80:80"
+    depends_on:
+      - keycloak
+      - mongodb
   keycloak:
     image: jboss/keycloak:latest
     command:
