[Version: 0.1] Pre-release development - Refactoring project structure (This is still ongoing)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [workspace]
 members = [
+    "domain",
     "client",
     "server",
     "repository",
-    "status",
-    "account",
-    "organization",
 ]
