--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "status"
+name = "domain"
 version = "0.1.0"
 authors = ["Benjamin Jacob Berg <benjaminjacobberg@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-account = { path = "../account", version = "0.1.0" }
-organization = { path = "../organization", version = "0.1.0" }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 chrono = "0.4"
 custom_error = "1.7.1"
