--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,9 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-status = { path = "../status", version = "0.1.0" }
-account = { path = "../account", version = "0.1.0" }
-organization = { path = "../organization", version = "0.1.0" }
+domain = { path = "../domain", version = "0.1.0" }
 repository = { path = "../repository", version = "0.1.0" }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 chrono = "0.4"
