--- a/interfaces/Cargo.toml
+++ b/interfaces/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "interfaces"
 version = "0.1.0"
 authors = ["Benjamin Jacob Berg <benjaminjacobberg@gmail.com>"]
 edition = "2018"
@@ -10,17 +10,9 @@ edition = "2018"
 application = { path = "../application", version = "0.1.0" }
 domain = { path = "../domain", version = "0.1.0" }
 infrastructure = { path = "../infrastructure", version = "0.1.0" }
-interfaces = { path = "../interfaces", version = "0.1.0" }
-uuid = { version = "0.8", features = ["serde", "v4"] }
-serde = "1.0.103"
-serde_json = "1.0.44"
-serde_derive = "1.0.103"
-actix-rt = "1.0.0"
 actix-web = "2.0.0"
-actix-cors = "0.2.0"
-actix-identity = "0.2.1"
-env_logger = "0.7"
-log = "0.4.3"
+chrono = "0.4"
+uuid = { version = "0.8", features = ["serde", "v4"] }
 
 [dependencies.juniper]
 git = "https://github.com/graphql-rust/juniper"
@@ -29,4 +21,3 @@ branch = "master"
 [dependencies.juniper_actix]
 git = "https://github.com/graphql-rust/juniper"
 branch = "master"
-
