--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace]
 members = [
+    "application",
+    "client",
     "domain",
     "infrastructure",
-    "client",
+    "interfaces",
     "server",
 ]
