--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,6 +19,7 @@ actix-web = "2.0.0"
 actix-cors = "0.2.0"
 actix-identity = "0.2.1"
 env_logger = "0.7"
+dotenv = "0.15.0"
 log = "0.4.3"
 
 [dependencies.juniper]
